feat: add article page
add article page, edit article layout component style, add loading component to show when data is fetching and add dayjs package to show formatted createdAt articles date.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -16,6 +16,7 @@
     --light-grey-green: #d5e6c7;
     --dark-sky-blue: #5bc0de;
     --brick: #cb2e25;
+    --gunmetal: #55595c;
 }
 
 @font-face {
